--- a/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
+++ b/tipovacka-app/src/app/components/matches-overview/matches-overview.component.html
@@ -1,7 +1,6 @@
 <div class="flex flex-col w-full gap-y-8">
-  <ng-container *ngFor="let match of matches | filterMatchesBy: leaguesFilter; let i = index">
+  <ng-container *ngFor="let match of matches | filterMatchesBy: (dataService.selectedLeagues$ | async) || []; let i = index">
     <app-match
-      *ngIf="!leaguesFilter.length || isLeagueInFilter[match.leagueName]"
       [data]="match"
       [votes]="votes"
     />
