--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -1,46 +1,5 @@
 <div class="relative overflow-x-auto sm:rounded-lg mt-8 w-full text-sm flex flex-col gap-4">
-  <div
-    class="w-full flex justify-between items-end">
-    <div>
-      <div
-        *ngIf="(dataService.selectedUserLeague$ | async) as selectedUserLeague"
-        class="flex flex-col"
-      >
-        <h2 class="">{{ selectedUserLeague.name }}</h2>
-        <div class="text-xxs italic text-gray-600">
-            <span *ngFor="let leagues of selectedUserLeague.leagues; let i = index">
-              {{ leagues + (i < selectedUserLeague.leagues.length - 1 ? ', ' : '') }}
-            </span>
-        </div>
-      </div>
-    </div>
-    <div class="flex gap-2">
-      <!--
-      <ng-container *ngIf="(authService.isSignIn$ | async)">
-        <ng-container *ngIf="(dataService.userLeagues$ | async) as userLeagues; else btnLoading">
-          <button
-            (click)="openCreateUserLeagueModal()"
-            *ngIf="!userLeagues.length"
-            class="btn btn-secondary"
-          >
-            <span class="material-icons md-18">add</span>
-            <span class="md:hidden block material-icons md-18">groups</span>
-            <span class="hidden md:block">{{ 'CREATE_USER_LEAGUE_BUTTON' | transloco }}</span>
-          </button>
-          <button
-            (click)="openUserLeaguesOverviewModal()"
-            *ngIf="userLeagues.length"
-            class="btn btn-secondary"
-          >
-            <span class="material-icons md-18">groups</span>
-            <span class="hidden md:block">{{ 'USER_LEAGUES_OVERVIEW_BUTTON' | transloco: {count: (dataService.userLeagues$ | async)?.length} }}</span>
-          </button>
-        </ng-container>
-      </ng-container>
-      -->
-    </div>
-  </div>
-  <ng-container *ngIf="(dataService.standings$ | async) as standings">
+  <ng-container *ngIf="(data$ | async) as standings">
     <table
       class="w-full">
       <tr
