--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -55,8 +55,9 @@
       <div>{{data.date | datetimeFormatBy}}</div>
     </div>
   </div>
-  <div class="z-20 flex mt-6 gap-2 text-xs md:text-base w-full">
-    <div class="flex-1 flex justify-end">
+  <div class="z-20 flex items-end mt-6 gap-2 text-xs md:text-base w-full">
+    <div class="flex-1 flex flex-col items-end">
+      <app-form [data]="data.homeTeam.form"/>
       <div
         [ngClass]="{
           'font-medium': !hides[1],
@@ -64,6 +65,9 @@
         }"
         class="drop-shadow-md text-right leading-tight md:max-w-none max-w-[120px]"
       >
+        <span
+          *ngIf="data.homeTeam.rank"
+          class="text-gray-600 text-xxs">{{data.homeTeam.rank}}</span>
         {{data.homeTeam.name}}
       </div>
     </div>
@@ -76,7 +80,8 @@
       class="opacity-30 text-center font-normal leading-tight">
       {{data.homeTeam.goals}}-{{data.awayTeam.goals}}
     </div>
-    <div class="flex-1 flex">
+    <div class="flex-1 flex flex-col">
+      <app-form [data]="data.awayTeam.form"/>
       <div
         [ngClass]="{
           'font-medium': !hides[2],
@@ -85,6 +90,9 @@
         class="drop-shadow-md leading-tight md:max-w-none max-w-[120px]"
       >
         {{data.awayTeam.name}}
+        <span
+          *ngIf="data.awayTeam.rank"
+          class="text-gray-600 text-xxs">{{data.awayTeam.rank}}</span>
       </div>
     </div>
   </div>
