--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -1,4 +1,4 @@
-<div class="relative overflow-x-auto sm:rounded-lg mt-8 w-full text-sm flex flex-col gap-4">
+<div class="relative overflow-x-auto sm:rounded-lg w-full text-sm flex flex-col gap-4">
   <ng-container *ngIf="(data$ | async) as standings">
     <div
       *ngIf="(dataService.lastCalculationDate$ | async) as lastCalculationDate"
