--- a/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="(dataService.nextMatches$ | async) as nextMatches">
   <div
-    class="flex flex-col w-full mt-8">
+    class="flex flex-col w-full">
     <app-matches-overview
       [matches]="nextMatches"
       [votes]="(dataService.votesOfNextMatches$ | async) || undefined"
