--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="(dataService.prevMatches$ | async) as prevMatches"
-  class="flex flex-col mt-8">
+  class="flex flex-col">
   <app-matches-overview
     [matches]="prevMatches"
     [votes]="(dataService.votesOfPrevMatches$ | async) || {}"
