change routing and remove unused components

--- a/tipovacka-app/src/app/components/header/header.component.scss
+++ b/tipovacka-app/src/app/components/header/header.component.scss
@@ -1,3 +1,3 @@
 .bottom-navbar__item {
-  @apply inline-flex flex-col items-center justify-center px-5 hover:bg-gray-50;
+  @apply inline-flex flex-col items-center justify-center px-5 hover:bg-gray-50 first-of-type:pl-8 first-of-type:rounded-s-full;
 }
