--- a/tipovacka-app/src/app/components/settings/settings.component.html
+++ b/tipovacka-app/src/app/components/settings/settings.component.html
@@ -2,6 +2,10 @@
   <h1>{{ 'SETTINGS.TITLE' | transloco }}</h1>
 </header>
 <div class="flex flex-col items-center gap-8">
+  <div class="flex flex-col items-center">
+    {{(authService.getUserData$ | async)?.displayName}}
+    <div class="text-xxs text-gray-600">({{(authService.getUserData$ | async)?.email}})</div>
+  </div>
   <ul class="list-disc list-inside space-y-4">
     <li>{{ 'INFO.MATCH_TIP_DEADLINE' | transloco }}</li>
     <li>{{ 'INFO.MATCH_RESULT_WRITE' | transloco }}</li>
