--- a/tipovacka-app/src/app/components/fixtures/fixtures.component.html
+++ b/tipovacka-app/src/app/components/fixtures/fixtures.component.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="fixtures">
   <cdk-virtual-scroll-viewport
+    *ngIf="fixtures.length"
     class="h-[100dvh]"
     itemSize="180">
     <div class="container mx-auto p-4 flex flex-col w-full gap-y-8">
@@ -13,9 +14,12 @@
   </cdk-virtual-scroll-viewport>
   <div
     *ngIf="!fixtures.length"
-    class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-50"
-    role="alert">
-    {{ 'NO_SCHEDULE_MATCHES' | transloco }}
+    class="flex items-center justify-center h-[100dvh] w-full">
+    <div
+      class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-100"
+      role="alert">
+      {{ 'NO_SCHEDULE_MATCHES' | transloco }}
+    </div>
   </div>
 </ng-container>
 
