--- a/tipovacka-app/src/app/components/settings/settings.component.html
+++ b/tipovacka-app/src/app/components/settings/settings.component.html
@@ -1,16 +1,17 @@
 <header>
   <h1>{{ 'SETTINGS.TITLE' | transloco }}</h1>
 </header>
-<div class="flex flex-col items-center gap-8">
-  <div class="flex flex-col items-center">
-    {{(authService.getUserData$ | async)?.displayName}}
-    <div class="text-xxs text-gray-600">({{(authService.getUserData$ | async)?.email}})</div>
+<div class="flex flex-col gap-8">
+  <div class="flex items-center gap-4">
+    <img
+      [src]="(authService.getUserData$ | async)?.photoURL"
+      alt="user image"
+      class="h-12 w-12 rounded">
+    <div class="flex flex-col">
+      {{(authService.getUserData$ | async)?.displayName}}
+      <div class="text-xxs text-gray-600">({{(authService.getUserData$ | async)?.email}})</div>
+    </div>
   </div>
-  <ul class="list-disc list-inside space-y-4">
-    <li>{{ 'INFO.MATCH_TIP_DEADLINE' | transloco }}</li>
-    <li>{{ 'INFO.MATCH_RESULT_WRITE' | transloco }}</li>
-    <li>{{ 'INFO.MATCH_DEADLINE' | transloco }}</li>
-  </ul>
   <div class="flex gap-2">
     <button
       (click)="changeLang()"
@@ -26,6 +27,12 @@
       {{ "SETTINGS.SIGN_OUT" | transloco }}
     </button>
   </div>
+  <h2>{{ 'INFO.TITLE' | transloco }}</h2>
+  <ul class="list-disc list-inside space-y-4">
+    <li>{{ 'INFO.MATCH_TIP_DEADLINE' | transloco }}</li>
+    <li>{{ 'INFO.MATCH_RESULT_WRITE' | transloco }}</li>
+    <li>{{ 'INFO.MATCH_DEADLINE' | transloco }}</li>
+  </ul>
 </div>
 <footer>
   <button
