--- a/tipovacka-app/src/app/components/fixtures/fixtures.component.html
+++ b/tipovacka-app/src/app/components/fixtures/fixtures.component.html
@@ -2,14 +2,14 @@
   <div class="flex gap-2 overflow-auto p-4">
     <button
       (click)="activeLeague = i"
-      *ngFor="let league of dataService.leagues$ | async; let i = index"
+      *ngFor="let league of leagues$ | async; let i = index"
       [ngClass]="{
         'bg-gray-100': i !== activeLeague,
         'bg-blue-600 text-white': i === activeLeague
       }"
       class="badge flex items-center gap-2 bg-gray-100 border-[1px] whitespace-nowrap"
       id="league-badge-{{i}}"
-    >{{league.name}}</button>
+    >{{league.name | transloco}}</button>
   </div>
   <div
     *ngIf="fixtures.length"
@@ -17,7 +17,7 @@
     swipeGesture
   >
     <div
-      *ngFor="let league of dataService.leagues$ | async; let i = index"
+      *ngFor="let league of leagues$ | async; let i = index"
       [ngClass]="{
         '-translate-x-[100%]': activeLeague > i,
         'translate-x-[100%]': activeLeague < i
