remove truncate from team name

--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -62,7 +62,7 @@
         <app-form [data]="data.homeTeam.form"/>
       </div>
       <div
-        class="drop-shadow-md text-right font-bold leading-tight md:max-w-none max-w-[120px] truncate"
+        class="drop-shadow-md text-right font-bold leading-tight"
       >
         {{data.homeTeam.name}}
       </div>
@@ -84,7 +84,7 @@
           class="text-gray-600 font-light text-xxs">{{data.awayTeam.rank}}</span>
       </div>
       <div
-        class="drop-shadow-md font-bold leading-tight md:max-w-none max-w-[120px] truncate"
+        class="drop-shadow-md font-bold leading-tight"
       >
         {{data.awayTeam.name}}
       </div>
