--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -7,7 +7,7 @@
       'w-1/4': hides['1'],
       'w-1/3': states['1'] === 'normal' && !hides['1']
     }"
-    [style.--tw-gradient-from]="data.homeTeam.color"
+    [style.--tw-gradient-from]="data.homeTeam.color ?? '#333333'"
     class="absolute w-1/3 left-0 bottom-0 h-full bg-gradient-to-r from-blue-300"
   ></div>
   <div
@@ -18,31 +18,35 @@
       'w-1/4': hides['2'],
       'w-1/3': states['2'] === 'normal' && !hides['2']
     }"
-    [style.--tw-gradient-from]="data.awayTeam.color"
+    [style.--tw-gradient-from]="data.awayTeam.color ?? '#333333'"
     class="absolute w-1/3 right-0 bottom-0 h-full bg-gradient-to-l from-blue-300 opacity-30"
   ></div>
-  <div class="z-20 flex items-end gap-1 text-xs md:text-base w-full">
-    <div class="flex-1 gap-1 flex flex-col items-end">
-      <div class="flex gap-2 items-baseline">
+  <div class="flex flex-col items-center w-full gap-1">
+    <img
+      [alt]="data.leagueName"
+      [title]="data.leagueName"
+      class="h-3 w-auto opacity-70"
+      src="assets/images/{{data.leagueName}}.webp"
+    >
+    <div class="z-20 flex items-end gap-4 text-xs md:text-base w-full">
+      <div class="flex-1 gap-1 flex flex-col items-end">
+        <div class="flex gap-2 items-baseline">
         <span
           *ngIf="data.homeTeam.rank"
           class="text-gray-600 font-light text-xxs">{{data.homeTeam.rank}}</span>
-        <app-form [data]="data.homeTeam.form"/>
+          <app-form [data]="data.homeTeam.form"/>
+        </div>
+        <div
+          class="drop-shadow-md text-right font-bold leading-tight flex gap-2 items-center"
+        >
+          {{data.homeTeam.name}}
+          <img
+            (error)="imageError($event)"
+            [src]="'assets/images/club_logos/for_white_bg/' + data.homeTeam.id + '.webp'"
+            class="h-3"
+          >
+        </div>
       </div>
-      <div
-        class="drop-shadow-md text-right font-bold leading-tight"
-      >
-        {{data.homeTeam.name}}
-      </div>
-    </div>
-    <div
-      class="gap-1 flex flex-col mx-2">
-      <img
-        [alt]="data.leagueName"
-        [title]="data.leagueName"
-        class="h-3 w-auto opacity-70 mb-4"
-        src="assets/images/{{data.leagueName}}.webp"
-      >
       <div
         *ngIf="data.result === null"
         class="opacity-30 text-center font-normal leading-tight">vs
@@ -52,24 +56,29 @@
         class="opacity-30 text-center font-normal leading-tight">
         {{data.homeTeam.goals}}-{{data.awayTeam.goals}}
       </div>
-    </div>
-    <div class="flex-1 gap-1 flex flex-col">
-      <div class="flex items-baseline gap-2">
-        <app-form [data]="data.awayTeam.form"/>
-        <span
-          *ngIf="data.awayTeam.rank"
-          class="text-gray-600 font-light text-xxs">{{data.awayTeam.rank}}</span>
-      </div>
-      <div
-        class="drop-shadow-md font-bold leading-tight"
-      >
-        {{data.awayTeam.name}}
+      <div class="flex-1 gap-1 flex flex-col">
+        <div class="flex items-baseline gap-2">
+          <app-form [data]="data.awayTeam.form"/>
+          <span
+            *ngIf="data.awayTeam.rank"
+            class="text-gray-600 font-light text-xxs">{{data.awayTeam.rank}}</span>
+        </div>
+        <div
+          class="drop-shadow-md font-bold leading-tight flex gap-2 items-center"
+        >
+          <img
+            (error)="imageError($event)"
+            [src]="'assets/images/club_logos/for_white_bg/' + data.awayTeam.id + '.webp'"
+            class="h-3"
+          >
+          {{data.awayTeam.name}}
+        </div>
       </div>
     </div>
   </div>
   <div
     *ngIf="(authService.isSignIn$ | async) && !votes"
-    class="z-20 flex gap-2 w-full h-[54px] justify-center items-center text-xs text-gray-600"
+    class="z-20 flex gap-2 w-full h-[44px] justify-center items-center text-xs text-gray-600"
   >
     {{ 'VOTE_LOADING' | transloco }}
   </div>
@@ -83,43 +92,40 @@
       (click)="chooseResult(1)"
       [disabled]="data.date! < now || sendingVote !== undefined"
       [ngClass]="{
-        'border-green-600': states['1'] === 'correct',
-        'border-red-600': states['1'] === 'incorrect'
+        'btn-green': states['1'] === 'correct',
+        'btn-red': states['1'] === 'incorrect',
+        'btn-black': states['1'] === 'highlight',
+        'btn-white': states['1'] === 'normal'
       }"
-      [style.border-color]="states['1'] === 'highlight' ? data.homeTeam.color : ''"
-      class="btn btn-white w-[72px] h-[52px] flex justify-center drop-shadow-2xl"
+      class="btn w-[72px] flex justify-center drop-shadow-2xl"
     >
-      <img
-        [src]="'assets/images/club_logos/for_white_bg/' + data.homeTeam.id + '.webp'"
-        class="max-h-full"
-      >
+      1
     </button>
     <button
       (click)="chooseResult(0)"
       [disabled]="data.date! < now || sendingVote !== undefined"
       [ngClass]="{
-        'border-green-600': states['0'] === 'correct',
-        'border-red-600': states['0'] === 'incorrect'
+        'btn-green': states['0'] === 'correct',
+        'btn-red': states['0'] === 'incorrect',
+        'btn-black': states['0'] === 'highlight',
+        'btn-white': states['0'] === 'normal'
       }"
-      [style.border-color]="states['0'] === 'highlight' ? '#333333' : ''"
-      class="btn btn-white w-[72px] h-[52px] flex justify-center drop-shadow-2xl border-2"
+      class="btn w-[72px] flex justify-center drop-shadow-2xl"
     >
-      <span class="material-icons text-gray-600 md-24">close</span>
+      0
     </button>
     <button
       (click)="chooseResult(2)"
       [disabled]="data.date! < now || sendingVote !== undefined"
       [ngClass]="{
-        'border-green-600': states['2'] === 'correct',
-        'border-red-600': states['2'] === 'incorrect'
+        'btn-green': states['2'] === 'correct',
+        'btn-red': states['2'] === 'incorrect',
+        'btn-black': states['2'] === 'highlight',
+        'btn-white': states['2'] === 'normal'
       }"
-      [style.border-color]="states['2'] === 'highlight' ? data.awayTeam.color : ''"
-      class="btn btn-white w-[72px] h-[52px] flex justify-center drop-shadow-2xl"
+      class="btn w-[72px] flex justify-center drop-shadow-2xl"
     >
-      <img
-        [src]="'assets/images/club_logos/for_white_bg/' + data.awayTeam.id + '.webp'"
-        class="max-h-full"
-      >
+      2
     </button>
   </div>
   <div class="z-20 flex items-center gap-4 mt-2 text-xxs text-gray-950/50">
