--- a/tipovacka-app/src/app/components/settings/settings.component.html
+++ b/tipovacka-app/src/app/components/settings/settings.component.html
@@ -44,6 +44,7 @@
     <li>{{ 'INFO.MATCH_RESULT_WRITE' | transloco }}</li>
     <li>{{ 'INFO.MATCH_DEADLINE' | transloco }}</li>
   </ul>
+  <div class="italic opacity-70">© 2024 Martin Šoupal. All rights reserved.</div>
 </div>
 <footer>
   <button
