--- a/tipovacka-app/src/app/components/sign-in-alert/sign-in-alert.component.html
+++ b/tipovacka-app/src/app/components/sign-in-alert/sign-in-alert.component.html
@@ -1,12 +1,5 @@
 <header></header>
-<div class="flex">
-  <div
-    class="p-4 text-sm text-gray-800 rounded-lg bg-gray-100 flex items-center justify-center gap-2"
-    role="alert">
-    {{ 'TO_SAVE_NEED_TO_LOGIN' | transloco }}
-    <span class="material-icons md-18">login</span>
-  </div>
-</div>
+<div class="flex justify-center">{{ 'TO_SAVE_NEED_TO_LOGIN' | transloco }}</div>
 <footer>
   <button
     (click)="ref.close()"
