--- a/tipovacka-app/src/app/components/fixtures/fixtures.component.html
+++ b/tipovacka-app/src/app/components/fixtures/fixtures.component.html
@@ -1,43 +1,24 @@
-<ng-container *ngIf="fixtures">
-  <div class="flex gap-2 overflow-auto p-4">
-    <button
-      (click)="setActiveLeague(i)"
-      *ngFor="let league of dataService.leagues$ | async; let i = index"
-      [ngClass]="{
-        'bg-gray-100': i !== activeLeague,
-        'bg-blue-600 text-white': i === activeLeague
-      }"
-      class="badge flex items-center gap-2 bg-gray-100 border-[1px] whitespace-nowrap"
-      id="league-badge-{{i}}"
-    >{{league.name | transloco}}</button>
-  </div>
+<ng-container *ngIf="(fixtures | async) as _fixtures">
   <div
-    *ngIf="fixtures.length"
+    *ngIf="_fixtures.length"
     class="h-[calc(100dvh-58px)] overflow-hidden relative"
     swipeGesture
   >
-    <div
-      [ngClass]="{
-        '-translate-x-[100%]': false,
-        'translate-x-[100%]': false
-      }"
-      class="w-full h-full absolute transition-all overflow-scroll"
-    >
+    <div class="w-full h-full absolute transition-all overflow-scroll">
       <div
-        *ngIf="((dataService.leagues$ | async) ?? [])[activeLeague] as league"
         class="container mx-auto p-4 flex flex-col w-full gap-y-8">
         <app-match
-          *ngFor="let fixture of fixtures | filterMatchesBy: [league.name]"
+          *ngFor="let fixture of _fixtures"
           [data]="fixture"
-          [leagueColor]="league.color"
-          [votes]="votes"
+          [league]="league"
+          [votes]="(votes | async) || {}"
         />
         <div class="h-20"></div>
       </div>
     </div>
   </div>
   <div
-    *ngIf="!fixtures.length"
+    *ngIf="!_fixtures.length"
     class="flex items-center justify-center h-[calc(100dvh-58px)] w-full">
     <div
       class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-100"
@@ -48,7 +29,7 @@
 </ng-container>
 
 <div
-  *ngIf="!fixtures"
+  *ngIf="!(fixtures | async)"
   class="container mx-auto p-4 flex flex-col gap-y-8"
 >
   <app-match-skeleton/>
