--- a/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
@@ -1,4 +1,19 @@
-<app-fixtures
-  [fixtures]="(dataService.prevMatches$ | async) || undefined"
-  [votes]="(dataService.votesOfPrevMatches$ | async) || undefined"
-/>
+<div class="flex gap-2 overflow-auto p-4">
+  <button
+    (click)="setActiveLeague(i)"
+    *ngFor="let league of dataService.leagues$ | async; let i = index"
+    [ngClass]="{
+        'bg-gray-100': i !== activeLeagueIndex,
+        'bg-blue-600 text-white': i === activeLeagueIndex
+      }"
+    class="badge flex items-center gap-2 bg-gray-100 border-[1px] whitespace-nowrap"
+    id="league-badge-{{i}}"
+  >{{league.name | transloco}}</button>
+</div>
+@if (activeLeague) {
+  <app-fixtures
+  [fixtures]="dataService.prevLeaguesMatches$[activeLeague.id]"
+  [league]="activeLeague"
+  [votes]="dataService.prevLeaguesVotes$[activeLeague.id]"
+  />
+}
