--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -2,7 +2,7 @@
   [ngClass]="{
       'text-gray-50': data.leagueName === 'UEFA Champions League'
     }"
-  class="flex flex-col gap-2 w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-white transition-all max-w-2xl mx-auto max-h-[196px]"
+  class="flex flex-col gap-2 w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-white transition-all max-w-2xl mx-auto"
 >
   <div
     *ngIf="data.leagueName === 'UEFA Champions League'"
