--- a/tipovacka-app/src/app/components/fixtures/fixtures.component.html
+++ b/tipovacka-app/src/app/components/fixtures/fixtures.component.html
@@ -1,38 +1,29 @@
-<ng-container *ngIf="(fixtures | async) as _fixtures">
-  <div
-    *ngIf="_fixtures.length"
-    class="h-[calc(100dvh-58px)] overflow-hidden relative"
-    swipeGesture
-  >
-    <div class="w-full h-full absolute transition-all overflow-scroll">
-      <div
-        class="container mx-auto p-4 flex flex-col w-full gap-y-8">
-        <app-match
-          *ngFor="let fixture of _fixtures"
-          [data]="fixture"
-          [league]="league"
-          [votes]="(votes | async) || {}"
-        />
-        <div class="h-20"></div>
-      </div>
-    </div>
-  </div>
-  <div
-    *ngIf="!_fixtures.length"
-    class="flex items-center justify-center h-[calc(100dvh-58px)] w-full">
-    <div
-      class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-100"
-      role="alert">
-      {{ 'NO_SCHEDULE_MATCHES' | transloco }}
-    </div>
-  </div>
-</ng-container>
-
 <div
-  *ngIf="!(fixtures | async)"
-  class="container mx-auto p-4 flex flex-col gap-y-8"
+  class="h-[calc(100dvh-58px)] overflow-hidden relative"
+  swipeGesture
 >
-  <app-match-skeleton/>
-  <app-match-skeleton/>
-  <app-match-skeleton/>
+  <div class="container h-full mx-auto p-4 flex flex-col w-full gap-y-8 overflow-scroll pb-32">
+    <ng-container *ngIf="(fixtures | async) as _fixtures; else loading">
+      <app-match
+        *ngFor="let fixture of _fixtures"
+        [data]="fixture"
+        [league]="league"
+        [votes]="(votes | async) || {}"
+      />
+      <div
+        *ngIf="!_fixtures.length"
+        class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-100"
+        role="alert">
+        {{ 'NO_SCHEDULE_MATCHES' | transloco }}
+      </div>
+    </ng-container>
+  </div>
 </div>
+
+<ng-template #loading>
+  <app-match-skeleton></app-match-skeleton>
+  <app-match-skeleton></app-match-skeleton>
+  <app-match-skeleton></app-match-skeleton>
+  <app-match-skeleton></app-match-skeleton>
+  <app-match-skeleton></app-match-skeleton>
+</ng-template>
