--- a/tipovacka-app/src/app/components/match-skeleton/match-skeleton.component.html
+++ b/tipovacka-app/src/app/components/match-skeleton/match-skeleton.component.html
@@ -1,31 +1,33 @@
-<div class="flex flex-col w-full h-[196px] items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-gray-50 transition-all max-w-2xl mx-auto animate-pulse">
-  <div class="absolute md:-left-12 -left-16 top-0 h-full flex items-end">
-    <img
-      class="h-[90%] w-auto"
-      src="assets/images/players/default.webp"
-    >
-  </div>
-  <div class="absolute md:-right-12 -right-16 top-0 h-full flex items-end justify-end">
-    <img
-      class="h-[90%] w-auto"
-      src="assets/images/players/default.webp"
-    >
-  </div>
-  <div class="z-20 flex items-center gap-4 h-7 w-32 rounded-xl bg-gray-200">
-  </div>
-  <div class="z-20 flex justify-center mt-6 gap-2 font-bold text-lg md:text-3xl w-full">
-    <div class="h-9 w-32 rounded-xl bg-gray-200">
-    </div>
-    <div class="opacity-30 text-center font-normal">vs</div>
-    <div class="h-9 w-32 rounded-xl bg-gray-200">
-    </div>
+<div
+  class="flex flex-col gap-2 w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-white animate-pulse max-w-2xl"
+>
+  <div class="absolute bottom-0 left-0 w-full h-full flex">
+    <div class="w-6 h-full bg-gray-400"></div>
+    <div class="w-full h-full bg-gray-400 opacity-10"></div>
   </div>
   <div
-    class="z-20 flex gap-2 mt-2 w-full justify-center"
+    class="z-20 flex flex-col items-center w-full gap-1"
   >
-    <div class="h-[54px] w-[72px] rounded-xl bg-gray-200"></div>
-    <div class="h-[54px] w-[72px] rounded-xl bg-gray-200"></div>
-    <div class="h-[54px] w-[72px] rounded-xl bg-gray-200"></div>
+    <div class="h-3 w-16 bg-gray-200 rounded-xl"></div>
+    <div class="z-20 flex items-end gap-4 text-xs md:text-base w-full">
+      <div class="flex-1 gap-1 flex flex-col items-end">
+        <div class="h-[15px] w-32 bg-gray-200 rounded-xl"></div>
+      </div>
+      <div class="flex-1 gap-1 flex flex-col items-start">
+        <div class="h-[15px] w-32 bg-gray-200 rounded-xl"></div>
+      </div>
+    </div>
+  </div>
+  <div class="z-20 flex gap-2 w-full justify-center">
+    <div class="h-[40px] w-[72px] rounded-xl bg-gray-200"></div>
+    <div class="h-[40px] w-[72px] rounded-xl bg-gray-200"></div>
+    <div class="h-[40px] w-[72px] rounded-xl bg-gray-200"></div>
+  </div>
+  <div class="z-20 grid grid-cols-3 gap-4 mt-2 text-xxs opacity-70 px-2">
+    <div class="h-[14px] w-20 rounded-xl bg-gray-200"></div>
+    <div class="h-[14px] w-20 rounded-xl bg-gray-200"></div>
+    <div class="h-[14px] w-20 rounded-xl bg-gray-200"></div>
   </div>
 </div>
+
 
