--- a/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
@@ -8,12 +8,17 @@
       }"
     class="badge flex items-center gap-2 bg-gray-100 border-[1px] whitespace-nowrap"
     id="league-badge-{{i}}"
-  >{{league.name | transloco}}</button>
+  >
+    {{ league.name | transloco }}
+    <span class="text-xxs flex items-center justify-center py-0.5 px-1.5 rounded-full bg-gray-900/50 text-white">
+      {{ (dataService.prevLeaguesMatches$[league.id] | async)?.length ?? '-' }}
+    </span>
+  </button>
 </div>
 @if (activeLeague) {
   <app-fixtures
-  [fixtures]="dataService.prevLeaguesMatches$[activeLeague.id]"
-  [league]="activeLeague"
-  [votes]="dataService.prevLeaguesVotes$[activeLeague.id]"
+    [fixtures]="dataService.prevLeaguesMatches$[activeLeague.id]"
+    [league]="activeLeague"
+    [votes]="dataService.prevLeaguesVotes$[activeLeague.id]"
   />
 }
