--- a/tipovacka-app/src/styles.scss
+++ b/tipovacka-app/src/styles.scss
@@ -69,7 +69,7 @@
 }
 
 .btn-green {
-  @apply text-gray-50 bg-green-600 border-2 border-green-600;
+  @apply text-gray-50 bg-green-600;
 
   &:not(:disabled) {
     @apply hover:bg-green-800 focus:z-10 focus:ring-4 focus:ring-gray-200
@@ -77,7 +77,7 @@
 }
 
 .btn-red {
-  @apply text-gray-50 bg-red-600 border-2 border-red-600;
+  @apply text-gray-50 bg-red-600;
 
   &:not(:disabled) {
     @apply hover:bg-red-800 focus:z-10 focus:ring-4 focus:ring-gray-200
