--- a/tipovacka-app/src/app/components/fixtures/fixtures.component.html
+++ b/tipovacka-app/src/app/components/fixtures/fixtures.component.html
@@ -1,8 +1,5 @@
-<div
-  class="h-[calc(100dvh-58px)] overflow-hidden relative"
-  swipeGesture
->
-  <div class="container h-full mx-auto p-4 flex flex-col w-full gap-y-8 overflow-scroll pb-32">
+<div class="h-[calc(100dvh-58px)] overflow-hidden relative">
+  <div class="container h-full mx-auto p-4 flex flex-col w-full gap-y-8 overflow-scroll pb-24">
     <ng-container *ngIf="(fixtures | async) as _fixtures; else loading">
       <app-match
         *ngFor="let fixture of _fixtures"
