--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -106,16 +106,10 @@
       {{ tip }}
     </button>
   </div>
-  <div
-    [ngClass]="{
-      'grid-cols-2': data.result === null,
-      'grid-cols-3': data.result !== null
-    }"
-    class="z-20 grid gap-4 mt-2 text-xxs opacity-70 px-2"
-  >
-    <div class="place-self-end">{{ data.round }}</div>
-    @if (data.date! < now) {
-      <div class="place-self-center">
+  <div class="z-20 grid grid-flow-col gap-4 mt-2 text-xxs opacity-70 px-2">
+    <div>{{ data.round }}</div>
+    @if (data.result !== null) {
+      <div>
         @switch (data.status) {
           @default {
             {{ 'AFTER_FULLTIME' | transloco }}
@@ -129,6 +123,6 @@
         }
       </div>
     }
-    <div class="place-self-start">{{ data.date | datetimeFormatBy }}</div>
+    <div>{{ data.date | datetimeFormatBy }}</div>
   </div>
 </div>
