--- a/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
@@ -1,19 +1,16 @@
-<div class="flex gap-2 overflow-auto p-4">
-  <button
-    (click)="setActiveLeague(i)"
-    *ngFor="let league of dataService.leagues$ | async; let i = index"
-    [ngClass]="{
-        'bg-gray-100': i !== activeLeagueIndex,
-        'bg-blue-600 text-white': i === activeLeagueIndex
-      }"
-    class="badge flex items-center gap-2 bg-gray-100 border-[1px] whitespace-nowrap"
-    id="league-badge-{{i}}"
-  >
-    {{ league.name | transloco }}
-    <span class="text-xxs flex items-center justify-center py-0.5 px-1.5 rounded-full bg-gray-900/50 text-white">
-      {{ (dataService.prevLeaguesMatches$[league.id] | async)?.length ?? '-' }}
-    </span>
-  </button>
+<div class="p-4 pb-0">
+  <select
+    (change)="selectActiveLeague($event)"
+    class="input">
+    @for (league of dataService.leagues$ | async; track league.id) {
+      <option
+        [selected]="league.id === activeLeague.id"
+        [value]="league.id"
+      >
+        {{ league.name }} ({{ (dataService.prevLeaguesMatches$[league.id] | async)?.length ?? '-' }})
+      </option>
+    }
+  </select>
 </div>
 @if (activeLeague) {
   <app-fixtures
