--- a/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
@@ -1,21 +1,28 @@
-<div class="p-4 pb-0">
-  <select
-    (change)="selectActiveLeague($event)"
-    class="input">
-    @for (league of dataService.leagues$ | async; track league.id) {
-      <option
-        [selected]="league.id === activeLeague?.id"
-        [value]="league.id"
-      >
-        {{ league.name }} ({{ (dataService.prevLeaguesMatches$[league.id] | async)?.length ?? '-' }})
-      </option>
-    }
-  </select>
-</div>
 @if (activeLeague) {
+  <div class="max-w-2xl p-4 pb-0">
+    <select
+      (change)="selectActiveLeague($event)"
+      class="input">
+      @for (league of dataService.leagues$ | async; track league.id) {
+        <option
+          [selected]="league.id === activeLeague.id"
+          [value]="league.id"
+        >
+          {{ league.name }} ({{ (dataService.prevLeaguesMatches$[league.id] | async)?.length ?? '-' }})
+        </option>
+      }
+    </select>
+  </div>
   <app-fixtures
     [fixtures]="dataService.prevLeaguesMatches$[activeLeague.id]"
     [league]="activeLeague"
     [votes]="dataService.prevLeaguesVotes$[activeLeague.id]"
   />
+} @else {
+  <div class="flex h-screen justify-center items-center">
+    <img
+      class="animate-pulse"
+      src="../../../assets/icons/icon-512x512.png"
+      alt="logo"/>
+  </div>
 }
