--- a/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/previous-matches/previous-matches.component.html
@@ -1,5 +1,5 @@
 @if (activeLeague) {
-  <div class="max-w-2xl p-4 pb-0">
+  <div class="p-4">
     <select
       (change)="selectActiveLeague($event)"
       class="input">
