--- a/tipovacka-app/src/app/components/match-skeleton/match-skeleton.component.html
+++ b/tipovacka-app/src/app/components/match-skeleton/match-skeleton.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col gap-2 w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-white animate-pulse max-w-2xl"
+  class="flex flex-col gap-2 w-full items-center rounded-xl relative overflow-hidden pt-4 pb-2 bg-white animate-pulse max-w-2xl mx-auto"
 >
   <div class="absolute bottom-0 left-0 w-full h-full flex">
     <div class="w-6 h-full bg-gray-400"></div>
